--- a/notebook/car_price_prediction.ipynb
+++ b/notebook/car_price_prediction.ipynb
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "A2qk3RItdipU"
       },
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -253,7 +253,7 @@
               "4             1  white      72K    diesel       2016  669901.0  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -427,7 +427,7 @@
               "max    1.357004e+07      3.000000  2024.000000  4.290000e+06"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -447,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -474,7 +474,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -485,7 +485,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "id": "_oGsITyGgklZ"
       },
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -523,7 +523,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -543,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -558,7 +558,7 @@
               "12"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -569,7 +569,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
         "id": "xHc5AbfehXkA"
       },
@@ -580,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -595,7 +595,7 @@
               "0"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -615,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -730,7 +730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -884,7 +884,7 @@
               "4  Hyundai-Elite i20  "
             ]
           },
-          "execution_count": 19,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -896,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -923,7 +923,7 @@
               "Name: count, Length: 162, dtype: int64"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -934,7 +934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 15,
       "metadata": {
         "id": "uZOMLLBflAeu"
       },
@@ -945,7 +945,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 16,
       "metadata": {
         "id": "u0OC9qgjlFdf"
       },
@@ -956,7 +956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 17,
       "metadata": {
         "id": "_kEJ1twInBZ7"
       },
@@ -991,7 +991,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1036,7 +1036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1069,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1102,7 +1102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1135,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1168,7 +1168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1201,7 +1201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1234,7 +1234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1264,7 +1264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1311,7 +1311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1346,7 +1346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1380,7 +1380,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1411,7 +1411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1450,7 +1450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 31,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1604,7 +1604,7 @@
               "4  Hyundai-Elite i20  "
             ]
           },
-          "execution_count": 37,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1615,7 +1615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 32,
       "metadata": {
         "id": "qGuDMY48p5E4"
       },
@@ -1626,7 +1626,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1755,7 +1755,7 @@
               "4       2016  669901.0  Hyundai-Elite i20  "
             ]
           },
-          "execution_count": 39,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1766,7 +1766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 34,
       "metadata": {
         "id": "_Teg_skW4mOe"
       },
@@ -1777,7 +1777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 35,
       "metadata": {
         "id": "KO7hNtmK4p-K"
       },
@@ -1901,7 +1901,7 @@
               "4       2016  6.69901  Hyundai-Elite i20  "
             ]
           },
-          "execution_count": 41,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1912,7 +1912,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.to_csv('data.csv',index=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
       "metadata": {
         "id": "IcKJKIv8syQ0"
       },
@@ -1958,7 +1967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2008,7 +2017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 39,
       "metadata": {
         "id": "jU6K5vfZuWwA"
       },
@@ -2019,7 +2028,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2148,7 +2157,7 @@
               "4       2016  6.69901    5.911615  "
             ]
           },
-          "execution_count": 45,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2180,7 +2189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 41,
       "metadata": {
         "id": "4xNj2Lx3uhGb"
       },
@@ -2209,7 +2218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 42,
       "metadata": {
         "id": "b9IyIWSCzmZj"
       },
@@ -2227,7 +2236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2296,7 +2305,7 @@
               "0       2016   3.22    3.921803  "
             ]
           },
-          "execution_count": 48,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2307,7 +2316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 44,
       "metadata": {
         "id": "IB2ttjZPzoev"
       },
@@ -2338,7 +2347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 45,
       "metadata": {
         "id": "plzD_WMK1NPH"
       },
@@ -2361,7 +2370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 46,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2394,7 +2403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2407,8 +2416,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Mean Squared Error: 0.9173366254617078\n",
-            "R-squared: 0.9558123825135587\n"
+            "Mean Squared Error: 0.9131991047308118\n",
+            "R-squared: 0.9560116846871822\n"
           ]
         }
       ],
@@ -2430,7 +2439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2440,16 +2449,14 @@
       },
       "outputs": [
         {
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: ''",
           "output_type": "error",
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[53], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Get user input for prediction\u001b[39;00m\n\u001b[0;32m      2\u001b[0m input_data \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m----> 3\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCity\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEnter city: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBody_type\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter body type: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTransmission\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter transmission type: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "File \u001b[1;32mc:\\Users\\nikhi\\car_price_prediction\\myvenv\\Lib\\site-packages\\ipykernel\\kernelbase.py:1282\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1280\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1281\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m   1283\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1284\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1285\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1286\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m   1287\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-            "File \u001b[1;32mc:\\Users\\nikhi\\car_price_prediction\\myvenv\\Lib\\site-packages\\ipykernel\\kernelbase.py:1325\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1322\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1323\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1324\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m-> 1325\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1326\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1327\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[48], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNo_of_owners\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter No_of_owners: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolor\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter color: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 8\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMilleage\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEnter mileage: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFuel_type\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter fuel type: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m     10\u001b[0m input_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMake_year\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter year: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+            "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
           ]
         }
       ],
